[package]
name = "nibler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
env_logger = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.5"
indicatif = "0.17.0-rc.10"
reqwest = { version="0.11.10" , features = ["blocking"] }
crossterm =  "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
handy-macros = {git = "https://github.com/Adit-Chauhan/handy-macros"}
